docs/3.0.x/button.mdx
---
id: button
title: Button
metaTitle: Button | NativeBase
metaDescription: The Button component in NativeBase triggers an event or action. Learn about sizes, variants, icons, loading, ButtonGroup, and more here, along with examples.
---

import { ComponentTheme } from "../../src/components";

The `Button` component is used to trigger an action or event.

## Import

```jsx
import { Button, ButtonGroup } from "native-base";
```

- **Button** : The button component with support for custom icons, spinners, etc.
- **ButtonGroup** : Used to group buttons whose actions are related, with an option to flush them together.

## Examples

### Basic

```ComponentSnackPlayer path=primitives,Button,basic.tsx

```

### Sizes

```ComponentSnackPlayer path=primitives,Button,sizes.tsx

```

### Variants

```ComponentSnackPlayer path=primitives,Button,variants.tsx

```

### Loading

```ComponentSnackPlayer path=primitives,Button,loading.tsx

```

### Icons

```ComponentSnackPlayer path=primitives,Button,icons.tsx

```

### ButtonGroup

```ComponentSnackPlayer path=primitives,Button,ButtonGroup.tsx

```

### Basic (With Ref)

```ComponentSnackPlayer path=primitives,Button,WithRef.tsx

```

## Props

### Button

```ComponentPropTable path=primitives,Button,Button.tsx

```

### ButtonGroup

```ComponentPropTable path=primitives,Button,ButtonGroup.tsx

```

## Styling

<ComponentTheme name="button" />

## Accessibility

- Button has `role` set to [button](https://www.w3.org/WAI/ARIA/apg/#button).
- When Button has focus, Space or Enter activates it.
